config/base/services/webhook/resend-webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resend-webhook
  labels:
    app.kubernetes.io/name: resend-webhook
    app.kubernetes.io/part-of: email-provider-resend
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: resend-webhook
      app.kubernetes.io/part-of: email-provider-resend
  replicas: 1
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        app.kubernetes.io/name: resend-webhook
        app.kubernetes.io/part-of: email-provider-resend
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: resend-webhook
          image: ghcr.io/milo-os/resend-provider:latest
          imagePullPolicy: IfNotPresent
          args:
            - resend-webhook
            - --webhook-port=$(WEBHOOK_PORT)
            - --cert-dir=$(CERT_DIR)
            - --cert-file=$(CERT_FILE)
            - --key-file=$(KEY_FILE)
            - --metrics-bind-address=$(METRICS_BIND_ADDRESS)
          ports:
            - containerPort: 8443
              name: metrics
              protocol: TCP
            - containerPort: 8090
              name: webhook
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
          volumeMounts: []
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 64Mi

      automountServiceAccountToken: true
      terminationGracePeriodSeconds: 10
      volumes: []
