config/base/services/webhook/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: resend-webhook
spec:
  parentRefs:
    - name: external-gateway
      namespace: envoy-gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: resend-webhook
          kind: Service
          group: ''
          port: 8090
